elastic cross graph

--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/robust:cr-elastic-1} 
 
 \end{knitrout}
-    \caption{Varying number of competing buffer-filling cross traffic flows. \name controls a fixed 20 buffer-filling flows in each case. The Y-axis is normalized to the expected fair share of throughput. For example, when there are 40 cross traffic flows, the expected fair share of the bundle is $20 / 60 = 33.3\%$.}
+    \caption{Varying number of competing buffer-filling cross traffic flows. \name controls a fixed 20 buffer-filling flows in each case.}
     \label{fig:robust:cr-elastic}
 \end{figure}
