--- a/graphs/elastic-cross.Rnw
+++ b/graphs/elastic-cross.Rnw
@@ -10,14 +10,14 @@ df <- read.csv("data/vary_elastic.data", sep=" ")
 
 df$fair <- df$bundler_flows / (df$bundler_flows + df$cross_flows)
 df$actual <- df$btpt / (df$btpt + df$ctpt)
-df$normalized <- df$actual / df$fair
+#df$normalized <- df$actual / df$fair
 
 
 
-ggplot(df, aes(x=cross_flows, y=normalized*100, fill=scheme)) + 
+ggplot(df, aes(x=cross_flows, y=btpt, fill=scheme)) + 
     geom_bar(colour="black", position="dodge", stat="identity") + 
     xlab("# Buffer-Filling Cross Traffic Flows") + 
-    ylab("% Fair Share Throughput") + 
+    ylab("Aggregate Throughput (Mbps)") + 
     scale_fill_manual(
         limit=c("fifo_nobundler", "sfq_nimbus"), 
         values=c("fifo_nobundler"="#d95f02", "sfq_nimbus" =  "#1b9e77"), 
@@ -30,6 +30,6 @@ ggplot(df, aes(x=cross_flows, y=normalized*100, fill=scheme)) +
           text=element_text(angle=0,size=14,family="Lato",face="bold")
     )
 @
-    \caption{Varying number of competing buffer-filling cross traffic flows. \name controls a fixed 20 buffer-filling flows in each case. The Y-axis is normalized to the expected fair share of throughput. For example, when there are 40 cross traffic flows, the expected fair share of the bundle is $20 / 60 = 33.3\%$.}
+    \caption{Varying number of competing buffer-filling cross traffic flows. \name controls a fixed 20 buffer-filling flows in each case.}
     \label{fig:robust:cr-elastic}
 \end{figure}
