--- a/queue-control.tex
+++ b/queue-control.tex
@@ -43,7 +43,8 @@ How many packets should this be? The \inbox should be able to generate enough pa
 $A \int_0^{\frac{T}{4}} sin(\frac{4\pi{}t}{T}) dt = \frac{AT}{2\pi}$.
 From Nimbus, we use $T = 0.2$ seconds and $A$ is as above, one-fourth the bottleneck bandwidth. By Little's law, we can calculate the amount of extra queueing: $\frac{T}{8\pi}$, or $8$ms.
 We thus configure the \inbox to hold back $8$ms of queueing for active probing.
-Note that this extra queueing is in addition to queueing in the network. As a result, the end-to-end Cubic connections will see RTT inflation, and experience slightly lower throughput due to RTT unfairness. In \an{forward pointer to eval} we show that \name still achieves status quo performance.
+Note that this extra queueing is in addition to queueing in the network. As a result, the end-to-end Cubic connections will see RTT inflation, and experience slightly lower throughput due to RTT unfairness. 
+In \S\ref{s:robust:cross} we show that this effect is not large; \name still achieves performance comparable to the status quo.
 
 How should we achieve this target queueing delay? 
 This problem is similar to the role of the PIE AQM mechanism~\cite{pie}, which also seeks to maintain a queueing delay target.
