--- a/robust.tex
+++ b/robust.tex
@@ -21,9 +21,9 @@ Figure~\ref{fig:robust:cr-inelastic} shows that \name continues to provide benef
 \input{elastic-cross}
 \paragrapha{Buffer-filling flows} Competition from persistent backlogged flows that fill the bottleneck link's buffer is the worst-case scenario for \name (as discussed in \S\ref{s:deploy}).
 As described in \S\ref{s:queue-ctl}, \name's congestion controller must push packets into the bottleneck queue to compete fairly, and thus it cannot retain packets at the \inbox for scheduling. 
-Furthermore, since \name maintains a $10$ms queue at the \inbox in these cases, we expect a small amount of RTT unfairness. \an{maybe don't say this?}
+Furthermore, recall that \name maintains a $10$ms queue at the \inbox in this case. Thus, we expect component flows to experience RTT unfairness.
 We indeed see this in Figure~\ref{fig:robust:cr-elastic}, as we vary the number of competing Cubic cross-traffic flows.
-\an{need to read this paragraph carefully to make sure it is correct}
+As expected, the component flows, on aggregate, experience \an{XX}\% less throughput on average.
 
 \input{twobundler}
 \paragrapha{Competing Bundles} Last, we evaluate the case where flows from multiple bundles compete with one another. 
