status-quo story

--- a/deployment.tex
+++ b/deployment.tex
@@ -36,11 +36,18 @@ significant improvements in performance \an{up to XX\%}, as it would then have c
 We expect this to become the common form of observed congestion as more domains deploy \name. 
 
 \paragraphi{Congestion due to un-bundled cross-traffic} We now consider the scenario where the cross-traffic includes flows from domains that have not yet deployed a \name. If all such \emph{un-bundled} competing flows are short-lived (up to a few MBs), the bundled traffic still sees significant performance benefits (\an{ZZ \%}). 
-However, if the cross traffic is long lasting and aggressively fills up available buffer space at the bottleneck link, using a delay-based congestion controller  at the \name would adversely impact the bundled traffic. Instead, \name detects the presence of such \emph{buffer-filling} cross-traffic and, to compete fairly, pushes more packets into the network (as described in \S\ref{s:queue-ctl}). It thus relinquishes its control over the bundled traffic, and falls back to the status-quo performance.
-%This scenario is a limitation of \name's design, since it forces \name to fall back to status-quo performance.
-%\an{reword} 
-Such buffer-filling flows are unlikely to arrive very frequently~\cite{caida-dataset}. 
+However, if the cross traffic is long lasting and aggressively fills up available buffer space at the bottleneck link, using a delay-based congestion controller  at the \name would adversely impact the bundled traffic. 
+Instead, \name detects the presence of such \emph{buffer-filling} cross-traffic and, to compete fairly, pushes more packets into the network. 
+It thus relinquishes its control over the bundled traffic.
+However, in these cases, \name chooses to create extra queueing as described in \S\ref{s:queue-ctl} to be able to detect when the cross traffic leaves.
+Therefore, the bundle's aggregate throughput will decrease slightly due to RTT unfairness.
+We evaluate this phenomenon in \S\ref{s:robust:cross}.
+
+\paragraphi{However, buffer-filling cross traffic is rare}
+Recent work in CDNs shows~\cite{akamai-cdn-trace} that the vast majority of requests are smaller than 1MiB; these requests may fill buffers for a few seconds, but no more.
+We further analyze a packet trace from an Internet backbone router~\cite{caida-dataset}.
+The flow size distribution here is even more skewed: $97.6\%$ of flows are under $10$KB, and only $0.02\%$ of flows are larger than $5$MB.
 
 \vspace{0.05in}
-\paragrapha{Takeaway} While \name must revert to status quo performance in the face of aggressive, buffer-filling cross traffic, in most scenarios it significantly improves performance (as we will show in \S\ref{s:eval}).
+\paragrapha{Takeaway} While \name must yield its scheduling ability in the face of aggressive, buffer-filling cross traffic, in most scenarios it significantly improves performance (as we show in \S\ref{s:eval}).
 This, combined with its deployment ease, makes a strong case for deploying \name. 
