--- a/ref.bib
+++ b/ref.bib
@@ -1586,9 +1586,16 @@ author = {{Chelsio Communications}},
  address = {New York, NY, USA},
 }
 
+@inproceedings{akamai-cdn-trace,
+ title = {{AdaptSize: Orchestrating the Hot Object Memory Cache in a Content Delivery Network}},
+ author = {Berger, Daniel and Sitaraman, Ramesh and Harchol-Balter, Mor},
+ booktitle={NSDI},
+ year=2017,
+}
+
 @inproceedings{heavy-hitters,
  author = "Sivaraman, Vibhaalakshmi and Narayana, Srinivas and Rottenstreich, Ori and Muthukrishnan, S and Rexford, Jennifer",
- title = "Heavy-Hitter Detection Entirely in the Data Plane",
+ title = {{Heavy-Hitter Detection Entirely in the Data Plane}},
  booktitle = {SOSR},
  year = 2017,
 }
@@ -1702,7 +1709,7 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
 
 @inproceedings{virtualClocks,
  author = {Zhang, L.},
- title = {Virtual Clock: A New Traffic Control Algorithm for Packet Switching Networks},
+ title = {{Virtual Clock: A New Traffic Control Algorithm for Packet Switching Networks}},
  booktitle = {SIGCOMM},
  year = {1990},
 } 
@@ -1723,7 +1730,7 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
 
 @inproceedings{pifo,
  author = {Sivaraman, Anirudh and Subramanian, Suvinay and Alizadeh, Mohammad and Chole, Sharad and Chuang, Shang-Tse and Agrawal, Anurag and Balakrishnan, Hari and Edsall, Tom and Katti, Sachin and McKeown, Nick},
- title = {Programmable Packet Scheduling at Line Rate},
+ title = {{Programmable Packet Scheduling at Line Rate}},
  booktitle = {SIGCOMM},
  year = {2016},
 } 
