--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -8,3 +8,5 @@
     \caption{Varying number of competing buffer-filling cross traffic flows. \name controls a fixed 20 buffer-filling flows in each case.}
     \label{fig:robust:cr-elastic}
 \end{figure}
+
+\newcommand{\bundlerElasticTputWorseness}{18\%\xspace}
