--- a/queue-control.tex
+++ b/queue-control.tex
@@ -40,7 +40,7 @@ Practically, this would mean that once \inbox switches to compete with cross tra
 
 Instead, to support active probing while also letting the traffic pass, the \inbox must \emph{hold back} some packets.
 How many packets should this be? The \inbox should be able to generate enough packets for a Nimbus up-pulse, \ie the area under the up-pulse curve: 
-$A \int_0^{\frac{T}{4}} sin(\frac{4\pi{}t}{T}) dt = \frac{AT}{2\pi}$.
+$A \int_0^{\frac{T}{4}} \sin(\frac{4\pi{}t}{T}) dt = \frac{AT}{2\pi}$.
 From Nimbus, we use $T = 0.2$ seconds and $A$ is as above, one-fourth the bottleneck bandwidth. By Little's law, we can calculate the amount of extra queueing: $\frac{T}{8\pi}$, or $8$ms.
 We thus configure the \inbox to hold back $8$ms of queueing for active probing.
 Note that this extra queueing is in addition to queueing in the network. As a result, the end-to-end Cubic connections will see RTT inflation, and experience slightly lower throughput due to RTT unfairness. 
@@ -56,37 +56,55 @@ We pick $\alpha = 10$ and $\beta = 10$ as per \S\ref{s:qctl:pi}.
 \section{Queue Controller Stability}\label{s:qctl:pi}
 
 We control the queues with the update function 
-    
-    $\dot{r}(t) = \alpha (q - q_T) + \beta (\dot{q})$.
+\begin{equation} 
+    \dot{r}(t) = \alpha (q - q_T) + \beta (\dot{q})
+\end{equation}
 
 How should we set $\alpha$ and $\beta$? This decision is related to the size of the Nimbus pulse. 
 If the queue controller is too aggressive (\ie it reacts quickly to maintain the queue target), it will nullify the Nimbus pulse with its overlaid rate control.
 If it is too timid, it will not be able to effectively control the queues.
 
-Therefore, we want the target queue length to be $A sin(\frac{2\pi{}t}{T})$. 
-We can write how the queue length varies with time as 
-    
-    $\dot{q}(t) = \mu - r(t) - A sin(\frac{2\pi{}t}{T})$, where $\mu$ is the link bandwidth.
+Therefore, we want the target queue length to be $A \sin(\frac{2\pi{}t}{T})$. 
+We can write how the queue length varies with time as (where $\mu$ is the link bandwidth):
+\begin{equation} 
+    \dot{q}(t) = \mu - r(t) - A \sin(\frac{2\pi{}t}{T})
+\end{equation}
 
 \noindent Thus, 
-    
-    $\ddot{q}(t) = - \dot{r}(t) - A \frac{2\pi{}t}{T} cos(\frac{2\pi{}t}{T})$.
+
+\begin{equation}
+    \ddot{q}(t) = - \dot{r}(t) - A \frac{2\pi{}t}{T} \cos(\frac{2\pi{}t}{T})
+\end{equation}
 
 \noindent Combining with the rate update rule:
 
-$\ddot{q}(t) - \beta \dot{q}(t) + \alpha (q(t) - q_T) = A \frac{2\pi{}t}{T} cos(\frac{2\pi{}t}{T})$.
+\begin{equation}
+    \ddot{q}(t) - \beta \dot{q}(t) + \alpha (q(t) - q_T) = A \frac{2\pi{}t}{T} \cos(\frac{2\pi{}t}{T})
+\end{equation}
 
 \noindent Substituting the pulse parameters from Nimbus and using $y(t) = q(t) - q_T$, we write a second-order ordinary differential equation (ODE) with sinusoidal input:
 
-$\ddot{y}(t) - \beta \dot{y}(t) + \alpha y(t) = 10\pi{}A cos(10\pi{}t)$.
+\begin{equation}
+    \ddot{y}(t) - \beta \dot{y}(t) + \alpha y(t) = 10\pi{}A \cos(10\pi{}t)
+\end{equation}
 
-    \noindent This has the standard-form solution \an{todo cite a textbook}:
+    \noindent This has the standard-form solution:
 
-$y(t) = c_1 e^{r_1 t} + c_2 e^{r_2 t} + \frac{10\pi{}A}{|p(10\pi{}i|} cos(10\pi{}i - \phi)$ where $p$ is the characteristic polynomial and $r_1, r_2$ are its roots.
+\begin{equation}
+    y(t) = c_1 e^{r_1 t} + c_2 e^{r_2 t} + \frac{10\pi{}A}{|p(10\pi{}i)|} \cos(10\pi{}i - \phi)
+\end{equation}
+        
+where $p$ is the characteristic polynomial and $r_1, r_2$ are its roots;
+\ie, 
+\begin{equation}
+r_1 = \frac{-\beta + \sqrt{\beta^2 - 4\alpha}}{2}, r_2 = \frac{-\beta - \sqrt{\beta^2 - 4\alpha}}{2}
+\end{equation}
 
 \noindent We want: (1) the $r_1$, $r_2$ to be large, so the queue converges quickly, and (2) the pulse amplitude to be approximately the Nimbus pulse amplitude, so:
 
-$\frac{10\pi{}A}{|p(10\pi{}i|} = \frac{A}{5\pi}$.
+\begin{equation}
+\frac{10\pi{}A}{|p(10\pi{}i)|} = \frac{A}{5\pi}
+\end{equation}
 
 $\alpha = 10, \beta = 10$ satisfy these constraints.
 \end{Appendix}
