--- a/robust.tex
+++ b/robust.tex
@@ -3,12 +3,13 @@
 \input{big_exp_text}
 Can \name successfully revert to status-quo performance in the presence of buffer-filling cross traffic, then resume providing benefits once that cross traffic leaves?
 In Figure~\ref{fig:eval:bigexp}, we show this scenario.
-At first, the link is occupied only by \name's traffic, similar to the setup above.
+At first, the link is occupied only by \name's traffic, similar to the setup described in \S\ref{s:eval:setup}.
+\radhika{do we have a backlog flow in the bundle here? If yes, mention it. If not, delete this comment.}
 At time $t=60$sec, a buffer-filling cross traffic flow arrives.
 \name detects its presence (indicated by the gray shading) and reverts to status-quo performance, as described in \S\ref{s:queue-ctl}.
 At time $t=120$sec, the buffer-filling flow stops and non-buffer-filling traffic starts, generated from the same distribution as \name as described in \S\ref{s:eval:setup}.
 \name correctly detects that it is safe to resume delay-control, and continues providing scheduling benefits.
-
+\radhika{In the graph, rewrite `Queueing Delay' as `In-network Queueing Delay'.} 
 For the remainder of this subsection, we present three micro-benchmarks which dig deeper into the latter two scenarios, where cross traffic can affect \name's performance. 
 We present results with both Nimbus and Copa being used as the congestion control algorithm at the \inbox.
 
