--- a/graphs/overview-benefits.Rnw
+++ b/graphs/overview-benefits.Rnw
@@ -25,11 +25,11 @@ ggplot(small, aes(
     ylab("Slowdown") +
     ggtitle("Small\n< 10KB") +
     scale_fill_manual(
-        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq","copa+nimbus_fifo"),
+        limit=c("nobundler_fifo", "nobundler_sfq","copa+nimbus_sfq", "copa+nimbus_fifo"),
         labels=c(
             "nobundler_fifo" = "Status Quo",
-            "copa+nimbus_sfq" = "Bundler", 
             "nobundler_sfq" = "In-Network",
+            "copa+nimbus_sfq" = "Bundler", 
             "copa+nimbus_fifo" = "Without Scheduling"
         ),
         values = c(
@@ -40,7 +40,7 @@ ggplot(small, aes(
         )
     ) +
     scale_x_discrete(
-        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq","copa+nimbus_fifo"),
+        limit=c("nobundler_fifo", "nobundler_sfq","copa+nimbus_sfq", "copa+nimbus_fifo"),
         scale_name=NULL, name=NULL
     ) +
     coord_cartesian(ylim=c(1,4)) +
@@ -57,7 +57,7 @@ ggplot(med, aes(
     ylab(NULL) +
     ggtitle("Medium\n10KB - 1MB") +
     scale_fill_manual(
-        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq","copa+nimbus_fifo"),
+        limit=c("nobundler_fifo", "nobundler_sfq","copa+nimbus_sfq", "copa+nimbus_fifo"),
         labels=c(
             "nobundler_fifo" = "Status Quo",
             "copa+nimbus_sfq" = "Bundler", 
@@ -72,7 +72,7 @@ ggplot(med, aes(
         )
     ) +
     scale_x_discrete(
-        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq","copa+nimbus_fifo"),
+        limit=c("nobundler_fifo", "nobundler_sfq","copa+nimbus_sfq", "copa+nimbus_fifo"),
         scale_name=NULL, name=NULL
     ) +
     coord_cartesian(ylim=c(1,16)) +
@@ -90,7 +90,7 @@ ggplot(big, aes(
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab(NULL) + ggtitle("Large\n> 1MB") +
     scale_fill_manual(
-        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq","copa+nimbus_fifo"),
+        limit=c("nobundler_fifo", "nobundler_sfq","copa+nimbus_sfq", "copa+nimbus_fifo"),
         labels=c(
             "nobundler_fifo" = "Status Quo", "copa+nimbus_sfq" = "Bundler", 
             "nobundler_sfq" = "In-Network",
@@ -104,7 +104,7 @@ ggplot(big, aes(
         )
     ) +
     scale_x_discrete(
-        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq","copa+nimbus_fifo"),
+        limit=c("nobundler_fifo", "nobundler_sfq","copa+nimbus_sfq", "copa+nimbus_fifo"),
         scale_name=NULL, name=NULL
     ) +
     coord_cartesian(ylim=c(1,20)) +
