--- a/eval.tex
+++ b/eval.tex
@@ -112,13 +112,13 @@ We demonstrate that, in addition to improving flow completion times, our impleme
 \paragrapha{Achieving Low Packet Delays}
 We enable CoDel~\cite{fq-codel} at the \inbox to lower the packet delays, and test it for a single large backlogged flow using the setup described in \S\ref{s:eval}.
 CoDel adds ECN marks to packets in fair-queue buckets which exceed a queue length threshold. 
-As a result, endhosts cut their windows earlier than otherwise reducing the self-inflicted delay within their fair-queue bucket.
+As a result, endhosts cut their windows earlier, thus reducing their self-inflicted delay within their fair-queue bucket.
 We measure the resulting distribution of RTTs seen by the endhost connections with \name and \baseline in Table~\ref{t:eval:codel}.
 \input{lowdelays}
 As is expected from CoDel, \name in this experiment, achieves \delaysImprovement lower median packet delay than \baseline.
 
 \paragrapha{Strict Prioritization}\label{s:eval:strictprio}
-We uniformly divide the web request distribution described in \S\ref{s:eval:setup} into two classes, one of which is given a higher priority over the other. The results are presented in Table~\ref{t:eval:prio}.
+We uniformly divide the web request distribution described in \S\ref{s:eval:setup} into two classes, one of which is given a higher priority over the other. \radhika{what's the division ratio?} The results are presented in Table~\ref{t:eval:prio}.
 %of traffic transitting \name over a lower-priority class. 
 \input{strict-prio}
 Using a priority scheduler (we use the \texttt{pfifo\_fast} qdisc) at \inbox improves the flow completion times for the higher-priority class compared to \baseline.
