fill in radhika's numbers

--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -10,3 +10,5 @@
 \end{figure}
 
 \newcommand{\bundlerElasticTputWorseness}{18\%\xspace}
+\newcommand{\bundlerElasticTputWorsenessTen}{12\%\xspace}
+\newcommand{\bundlerElasticTputWorsenessFifty}{22\%\xspace}
