--- a/robust.tex
+++ b/robust.tex
@@ -7,7 +7,7 @@ In Figure~\ref{fig:eval:bigexp}, we show this scenario.
 At first, the link is occupied only by \name's traffic, similar to the setup described in \S\ref{s:eval:setup}.
 \radhika{do we have a backlog flow in the bundle here? If yes, mention it. If not, delete this comment.}
 \an{don't think so. @frank pls confirm}
-At time $t=60$sec, a buffer-filling cross traffic flow arrives.
+At time $t=60$sec, a buffer-filling cross traffic flow arrives/
 \name detects its presence (indicated by the gray shading) and starts pushing more packets into the network to compete fairly, reverting back to performance that is slightly worse than Status Quo (median FCT for short flows is \bigexpElasticSlowdownWorseness higher). 
 Performance is slightly worse because of the $10$ms queue that \name continues to maintain at its \inbox for active probing to detect the cross-traffic's departure, as described in \S\ref{s:queue-ctl}\footnote{We believe the benefits provided by \name in the more common regime with no competing buffer filling cross traffic are substantial enough to allow for this slight degradation in these specific scenarios.}.  \radhika{edited last two sentences. pls check.}
 At time $t=120$sec, the buffer-filling flow stops and non-buffer-filling traffic starts, generated from the same distribution as \name as described in \S\ref{s:eval:setup}.
@@ -31,7 +31,7 @@ We now evaluate how \name's throughput is impacted due to competition from varyi
 As discussed earlier, in this (rare) scenario, we expect component flows in a bundle to experience slightly higher RTTs compared to \baseline.
 We indeed see its impact in Figure~\ref{fig:robust:cr-elastic}, 
 %, as we vary the number of competing Cubic cross-traffic flows.
-where the component flows in the bundle experience  \bundlerElasticTputWorseness less throughput on average. Notice how the the impact on \name's throughput (which stems from the extra queuing at the \inbox) is independent of the amount of cross-traffic: the bundled flows experience XX lower throughput with 10 competing flows and YY lower throughput with 50. \radhika{please fill -- the trend could be interesting.}
+where the component flows in the bundle experience  \bundlerElasticTputWorseness less throughput on average. Notice how the the impact on \name's throughput (which stems from the extra queuing at the \inbox) is independent of the amount of cross-traffic: the bundled flows experience \bundlerElasticTputWorsenessTen lower throughput with 10 competing flows and \bundlerElasticTputWorsenessFifty lower throughput with 50. \radhika{please fill -- the trend could be interesting.}
 %Note that FCTs may not increase as much; in Figure~\ref{fig:eval:bigexp}, during the elastic cross traffic period the median short flow FCT is
 %\bigexpElasticSlowdownWorseness higher.
 \radhika{edited this. basically wanted to bring up the `performance is worse point' sooner when we discuss Fig 8, as opposed to towards the end of section, as it would have confused readers.}
